2004-12-23  Zoltan Varga  <vargaz@freemail.hu>

	* mini-sparc.c: Change mono_compile_aot to cfg->compile_aot.

	* mini.h mini.c mini-x86.c aot.c mini-sparc.c: Add a 'compile_corlib'
	argument mini_compile_method and to MonoCompile, and use this to
	determine whenever a given method is compiled for AOT. This allows the
	other methods compiled during AOT compilation to be free of AOT stuff,
	so the backends does not need to add special support for them by
	creating a fake GOT etc.

	* mini-x86.c (mono_arch_patch_code): Remove fake got stuff as it is no
	longer needed.

2004-12-21  Ben Maurer  <bmaurer@ximian.com>

	* mini.c (mono_method_to_ir): It turns out that some of the
	x-appdomain wrappers are lax with types, so just ignore this for
	all wrappers.

	* inssel.brg (OP_CHECK_ARRAY_TYPE): Optimize this by only looking
	at the vtable->klass. If it is non-shared code we can just use the
	vtable.

Tue Dec 21 17:43:06 CET 2004 Paolo Molaro <lupus@ximian.com>

	* mini-ppc.c: access MonoDomain from tls, too.

2004-12-21  Sebastien Pouliot  <sebastien@ximian.com>

	* declsec.c: Removed unused variable (and related warning ;-)

2004-12-21  Ben Maurer  <bmaurer@ximian.com>

	* iltests.il: New test for LDELEMA on an array of ref types.

	* mini.c (CEE_LDELEMA): We need to emit OP_CHECK_ARRAY_TYPE for
	all ldelema's on reftypes.
	(check_call_signature): Remove the OP_CHECK_ARRAY_TYPE from here,
	it was the wrong place to put it.

	* mini-x86.c (mono_arch_output_basic_block): Just use ecx as the
	register to pop to make this cleaner, at the request of Paolo.

2004-12-20  Ben Maurer  <bmaurer@ximian.com>

	* mini-ops.h (OP_GETHASHCODE): New op.

	* inssel.brg (OP_GETHASHCODE): Emit code for the new opcode

	* mini.c (mini_get_inst_for_method): Create the intrinsic hash
	operation.

	For a microbenchmark, this reduces the cost of Hashtable.get_Item
	by 25%.
	
	* mini-x86.c (mono_arch_output_basic_block): Rather than

	add ebp, 4

	Emit

	pop edx
