@@ -1,5 +1,10 @@
 2004-12-23  Zoltan Varga  <vargaz@freemail.hu>
 
+	* mini.c (get_method_from_ip): Another debug helper function.
+
+	* mini.c: Call mono_get_got_var () in a couple places. Handle the case
+	when got var accesses are created during the decompose phase.
+
 	* mini-sparc.c: Change mono_compile_aot to cfg->compile_aot.
 
 	* mini.h mini.c mini-x86.c aot.c mini-sparc.c: Add a 'compile_corlib'
